# productivity_assistant_agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
productivity_assistant/: agent.py  main.py  mcp_agent.py  mcp_client.py  models.py
productivity_assistant/mcp_servers/: calendar_mcp.py
productivity_assistant/servers/: calendar_server.py  gmail_server.py
productivity_assistant/tools/: calendar_tool.py  gmail_tool.py  google_api_service.py
